header visibble correct

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@
 }
 
 .header__container {
-  opacity: 0;
+  opacity: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4594,7 +4594,7 @@ h6 {
   }
 
   .header__container {
-    opacity: 0;
+    opacity: 1;
     height: 77px;
   }
 
